<resources>
    <string name="app_name">EverGreen</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="login_sing_up">Login/Sing up</string>
    <string name="version">V2.01</string>
    <string name="menu">Menu</string>
    <string name="loyalty">Loyalty</string>
    <string name="oder_history">Oder History</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="shop_infor">Shop Infor</string>
    <string name="notification">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>